gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail3895.d
version https://git-lfs.github.com/spec/v1
oid sha256:f6966dae361a49653082be679426e27be11e940a81855c55d52034faea6a294e
size 221
